--- a/src/assets/styles/modules/side-bare/index.scss
+++ b/src/assets/styles/modules/side-bare/index.scss
@@ -1,11 +1,15 @@
 .side-bare {
   background-color: white;
-  min-width: 235px;
+  width: 250px;
   padding: 2px 0;
   height: 100%;
 
   &__container {
     width: 100%;
+
+    &:not(:first-child) {
+      border-top: 1px solid #e2e5e8;
+    }
   }
 
   &__title {
@@ -19,47 +23,53 @@
     flex-wrap: wrap;
     align-items: center;
     position: relative;
-    padding: 15px 15px 15px 30px;
-    color: $dark-grey;
-    transition: 0.2s;
 
-    .first-icon {
-      margin-right: 12px;
-    }
-
-    a {
-      position: absolute;
+    button {
+      position: relative;
       width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      z-index: 2;
-    }
 
-    &:hover {
-      background-color: #fafafa;
-    }
+      display: flex;
+      align-items: center;
+      text-align: left;
+      padding: 15px 15px 15px 30px;
+      border: none;
+      outline: none;
 
-    &.active {
-      font-weight: $bold-weight;
-      padding-left: 26px;
-      border-left: 4px solid $blue;
-      background-color: #efefef;
-    }
+      background-color: white;
+      color: $dark-grey;
+      cursor: pointer;
 
-    .chevron-right-icon {
-      margin-left: auto;
+      transition: 0.2s;
+
+      :first-child {
+        margin-right: 12px;
+      }
+
+      &:hover {
+        background-color: #fafafa;
+      }
+
+      &.active {
+        font-weight: $bold-weight;
+        padding-left: 26px;
+        border-left: 4px solid $blue;
+        background-color: #efefef;
+      }
+
+      .chevron-right-icon {
+        margin-left: auto;
+      }
+
+      &.active .chevron-right-icon {
+        transform: rotate(90deg);
+      }
     }
   }
 
   &__dropdown {
+    max-height: 0;
     width: 100%;
-    position: relative;
-    padding-left: 10px;
-  }
-
-  &__item {
-    width: 100%;
-    position: relative;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
   }
 }
