--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -32,6 +32,6 @@ p {
 .container {
   display: flex;
   width: 100%;
-  height: 100vh;
-  margin: 56px auto;
+  min-height: 100vh;
+  margin: 56px auto 0 auto;
 }
