added dashboard reports

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,7 +4,7 @@ $body-color: #f6f7fb;
 $blue: #4099ff;
 $dark-blue: #215085;
 $light-blue: #d9ebff;
-$light-grey: #E2E5E8;
+$light-grey: #e2e5e8;
 $grey: #6c757d;
 $dark-grey: #666666;
 $light-green: #d5f7f0;
