--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -33,5 +33,10 @@ p {
   display: flex;
   width: 100%;
   min-height: 100vh;
-  margin: 56px auto 0 auto;
+  margin: 56px 0 0 0;
+
+  &__inner {
+    width: 100%;
+    padding: 30px;
+  }
 }
