--- a/src/assets/styles/modules/dashboard/index.scss
+++ b/src/assets/styles/modules/dashboard/index.scss
@@ -2,6 +2,8 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 @import "modules/reports";
+@import "modules/unique-visitor";
